# pyapp.aio-pika

./: .gitignore  README.rst  setup.cfg
pyapp_ext/aio_pika/: __init__.py  checks.py  default_settings.py  factory.py  queues.py
tests/: conftest.py  test_checks.py  test_factory.py
