[metadata]
name = pyApp AIO-Pika
author = Tim Savage
author-email = tim@savage.company
description = pyApp extension for AIO Pika
long-description = file: README.rst
url = 
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pyapp_ext.aio_pika
test_suite = tests
setup_requires =
    pytest-runner==5.2
    setuptools >=38.3
install_requires =
    pyapp-messaging >= 0.2
    aio-pika >= 5.0
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    aio_pika = pyapp_ext.aio_pika:Extension

[options.extras_require]
dev =
	docutils==0.15.2
	black==19.10b0

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=pyapp_ext.aio_pika

[check]
metadata = true
restructuredtext = true
strict = true
